--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
             <a href="#">Depoimentos</a>
             <a class="contact-btn" href="">Entre em Contato</a>
           </div>
+          <div class="items-menu-mobile">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+            <div class="menu-mobile">
+              <a href="#">Inicio</a>
+              <a href="#">Por que nós?</a>
+              <a href="#">Depoimentos</a>
+            </div>
+          </div>
         </div>
         <!--menu-->
         <div class="mockup">
@@ -218,6 +226,32 @@
     </section>
     <!--depoimentos-->
 
+    <section class="contato">
+      <h1>Entre em Contato</h1>
+      <div style="max-width: 800px" class="center">
+        <form method="post">
+          <input type="text" placeholder="Seu nome..." />
+          <input type="email" placeholder="Seu e-mail..." />
+          <textarea placeholder="Sua Mensagem..."></textarea>
+          <input type="submit" name="acao" value="Enviar" />
+        </form>
+      </div>
+    </section>
+
+    <footer>
+      <div style="max-width: 1280px" class="center">
+        <div class="text-footer">
+          <p>Todos os direitos reservados</p>
+        </div>
+        <div class="items-menu">
+          <a href="#">Inicio</a>
+          <a href="#">Por que nós?</a>
+          <a href="#">Depoimentos</a>
+          <a class="contact-btn" href="">Entre em Contato</a>
+        </div>
+      </div>
+    </footer>
+
     <script src="jquery.js"></script>
     <script src="slick.min.js"></script>
     <script>
@@ -239,6 +273,19 @@
             }
           }
         ]
+      });
+    </script>
+    <script>
+      var menuBtn = document.querySelector(".items-menu-mobile i");
+      menuBtn.addEventListener("click", () => {
+        let itemsMenu = document.querySelector(".menu-mobile");
+        if (itemsMenu.classList.contains("show")) {
+          itemsMenu.classList.remove("show");
+          itemsMenu.classList.add("hide");
+        } else {
+          itemsMenu.classList.remove("hide");
+          itemsMenu.classList.add("show");
+        }
       });
     </script>
   </body>
